added contact section

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,7 +25,7 @@
 	8. Clients
 	9. Our Blog
 	10. Contact
-	11. Footer
+	11. Footerntact
 	12. Carousel Effect
 	13. Isotope
 	14. Portfolio Hover effect
