--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -63,7 +63,7 @@
 	.title-one{
 		font-size:24px
 	}
-	#about-us p{
+	#about-me p{
 		font-size:14px
 	}.nav-tabs li{
 		width:33%
@@ -74,7 +74,7 @@
 	.nav-tabs li a i{
 		display:block
 	}
-	.about-us .tab-content .pull-left.media-object{
+	.about-me .tab-content .pull-left.media-object{
 		background-color:#F6F6F6;
 		display:block;float:inherit!important;margin-right:0;
 		width:100%
@@ -157,7 +157,7 @@
 	.title-one{
 		font-size:24px
 	}
-	#about-us p{
+	#about-me p{
 		font-size:14px
 	}
 	.nav-tabs li{
@@ -169,7 +169,7 @@
 	.nav-tabs li a i{
 		display:block
 	}
-	.about-us .tab-content .pull-left.media-object{
+	.about-me .tab-content .pull-left.media-object{
 		background-color:#F6F6F6;
 		display:block;
 		float:inherit!important;
